--- a/Talk/src/main.tex
+++ b/Talk/src/main.tex
@@ -64,7 +64,7 @@
 
     \section{Введение}\label{sec:introduction}
     \begin{frame}{Постановка задачи}
-        $\tX=(x_1, x_2,\ldots, x_N)$, $x_i\in \mathbb{R}$ "--- вещественный временной ряд.
+        $\tX=(x_0, x_1,\ldots, x_{N-1})$, $x_i\in \mathbb{R}$ "--- вещественный временной ряд.
 
         $\tX = \tT + \tP + \tR$.
 
