--- a/Talk/src/main.tex
+++ b/Talk/src/main.tex
@@ -301,7 +301,7 @@
                 \widetilde{\calH} = \sum_{l=1}^{R_1} \sum_{k=1}^{R_2} \sum_{p=1}^{R_3} c_{lkp} \mathbf{U}^{(1)}_{l}
                 \circ \mathbf{U}^{(2)}_{k} \circ \mathbf{U}^{(3)}_{p},
             \]
-            $R_i\leqslant \min(L, K, P)$ --- параметры алгоритма.
+            $R_1\leqslant L$, $R_2\leqslant K$, $R_3\leqslant P$ --- параметры алгоритма.
         \end{itemize}
     \end{frame}
 
