--- a/Talk/src/main.tex
+++ b/Talk/src/main.tex
@@ -372,7 +372,7 @@
         и независимы.
 
         \vspace{0.2cm}
-        Точность сравнивалась по RMSE по 1000 реализациям шума $\varepsilon_n^{(p)}$ при фиксированных $c_k^{(p)}$,
+        Точность сравнивалась по RMSE по 1000 реализаций шума $\varepsilon_n^{(p)}$ при фиксированных $c_k^{(p)}$,
         сравнение проводилось на одних и тех же реализациях шума при выборе оптимальных
         для каждого метода параметров $L$, $R$ и $R_3$.
     \end{frame}
